<resources>
    <string name="app_name">MyWallet</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">No account yet? <u>Create one</u></string>
    <string name="already_registered_login_me">Already registered. <u>Login me!</u></string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="month_spend">Spend this month: %d\u20BD</string>
    <string name="avg_spend">Average spend: %d₽</string>
    <array name="spend_categories">
        <item>Transport</item>
        <item>Fuel</item>
        <item>Sweets</item>
        <item>Products</item>
        <item>Entertainment</item>
        <item>Wear</item>
        <item>Medicine</item>
        <item>Other</item>
    </array>
    <array name="earn_categories">
        <item>Lab works</item>
        <item>Help</item>
        <item>Scholarship</item>
        <item>Benefit</item>
        <item>Other</item>
    </array>
    <array name="moths">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category:</string>
    <string name="add">ADD</string>
    <string name="spend_money">Spend money</string>
    <string name="earn_money">Earn money</string>
    <string name="empty_price">Please, add price value</string>
    <string name="empty_category">Please, select category</string>
    <string name="comment">Comment</string>
</resources>
